// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Checkbox checked 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c6 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c6:last-child {
  margin-bottom: 0;
}

.c7 {
  cursor: pointer;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,background,box-shadow,color,opacity;
  align-items: center;
  background: #3C64F4;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #3C64F4;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  height: 1.25rem;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  user-select: none;
  width: 1.25rem;
}

.c3:hover {
  border-color: #3C64F4;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 1;
}

<div
  class="c0"
>
  <input
    aria-checked="true"
    aria-labelledby=":r1:"
    checked=""
    class="c1 c2"
    id=":r0:"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    for=":r0:"
  >
    <svg
      aria-hidden="true"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M9 16.17L5.53 12.7a.996.996 0 10-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 10-1.41-1.41L9 16.17z"
      />
    </svg>
  </label>
  <div
    class="c5"
  >
    <label
      class="c6 c7"
      for=":r0:"
      id=":r1:"
    >
      Checked
    </label>
  </div>
</div>
`;

exports[`render Checkbox disabled checked 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c6 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c6:last-child {
  margin-bottom: 0;
}

.c7 {
  cursor: pointer;
  cursor: not-allowed;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,background,box-shadow,color,opacity;
  align-items: center;
  background: #3C64F4;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #3C64F4;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  height: 1.25rem;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  user-select: none;
  width: 1.25rem;
  background: #D9DCE9;
  border-color: #D9DCE9;
  cursor: not-allowed;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 1;
}

<div
  class="c0"
>
  <input
    aria-checked="true"
    aria-labelledby=":rj:"
    checked=""
    class="c1 c2"
    disabled=""
    id=":ri:"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    disabled=""
    for=":ri:"
  >
    <svg
      aria-hidden="true"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M9 16.17L5.53 12.7a.996.996 0 10-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 10-1.41-1.41L9 16.17z"
      />
    </svg>
  </label>
  <div
    class="c5"
  >
    <label
      aria-hidden="true"
      class="c6 c7"
      disabled=""
      for=":ri:"
      id=":rj:"
    >
      Checked
    </label>
  </div>
</div>
`;

exports[`render Checkbox disabled indeterminate 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c6 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c6:last-child {
  margin-bottom: 0;
}

.c7 {
  cursor: pointer;
  cursor: not-allowed;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,background,box-shadow,color,opacity;
  align-items: center;
  background: #3C64F4;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #3C64F4;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  height: 1.25rem;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  user-select: none;
  width: 1.25rem;
  background: #D9DCE9;
  border-color: #D9DCE9;
  cursor: not-allowed;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 1;
}

<div
  class="c0"
>
  <input
    aria-labelledby=":rp:"
    class="c1 c2"
    disabled=""
    id=":ro:"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    disabled=""
    for=":ro:"
  >
    <svg
      aria-hidden="true"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M18 13H6c-.55 0-1-.45-1-1s.45-1 1-1h12c.55 0 1 .45 1 1s-.45 1-1 1z"
      />
    </svg>
  </label>
  <div
    class="c5"
  >
    <label
      aria-hidden="true"
      class="c6 c7"
      disabled=""
      for=":ro:"
      id=":rp:"
    >
      Unchecked
    </label>
  </div>
</div>
`;

exports[`render Checkbox disabled unchecked 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c6 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c6:last-child {
  margin-bottom: 0;
}

.c7 {
  cursor: pointer;
  cursor: not-allowed;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,background,box-shadow,color,opacity;
  align-items: center;
  background: #FFFFFF;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  height: 1.25rem;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  user-select: none;
  width: 1.25rem;
  background: #F6F7FC;
  border-color: #D9DCE9;
  cursor: not-allowed;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 0;
}

<div
  class="c0"
>
  <input
    aria-checked="false"
    aria-labelledby=":rm:"
    class="c1 c2"
    disabled=""
    id=":rl:"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    disabled=""
    for=":rl:"
  >
    <svg
      aria-hidden="true"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M9 16.17L5.53 12.7a.996.996 0 10-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 10-1.41-1.41L9 16.17z"
      />
    </svg>
  </label>
  <div
    class="c5"
  >
    <label
      aria-hidden="true"
      class="c6 c7"
      disabled=""
      for=":rl:"
      id=":rm:"
    >
      Checked
    </label>
  </div>
</div>
`;

exports[`render Checkbox indeterminate 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c6 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c6:last-child {
  margin-bottom: 0;
}

.c7 {
  cursor: pointer;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,background,box-shadow,color,opacity;
  align-items: center;
  background: #3C64F4;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #3C64F4;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  height: 1.25rem;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  user-select: none;
  width: 1.25rem;
}

.c3:hover {
  border-color: #3C64F4;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 1;
}

<div
  class="c0"
>
  <input
    aria-labelledby=":rg:"
    class="c1 c2"
    id=":rf:"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    for=":rf:"
  >
    <svg
      aria-hidden="true"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M18 13H6c-.55 0-1-.45-1-1s.45-1 1-1h12c.55 0 1 .45 1 1s-.45 1-1 1z"
      />
    </svg>
  </label>
  <div
    class="c5"
  >
    <label
      class="c6 c7"
      for=":rf:"
      id=":rg:"
    >
      Unchecked
    </label>
  </div>
</div>
`;

exports[`render Checkbox unchecked 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c6 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c6:last-child {
  margin-bottom: 0;
}

.c7 {
  cursor: pointer;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,background,box-shadow,color,opacity;
  align-items: center;
  background: #FFFFFF;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  height: 1.25rem;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  user-select: none;
  width: 1.25rem;
}

.c3:hover {
  border-color: #B4BAD1;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 0;
}

<div
  class="c0"
>
  <input
    aria-checked="false"
    aria-labelledby=":r4:"
    class="c1 c2"
    id=":r3:"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    for=":r3:"
  >
    <svg
      aria-hidden="true"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M9 16.17L5.53 12.7a.996.996 0 10-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 10-1.41-1.41L9 16.17z"
      />
    </svg>
  </label>
  <div
    class="c5"
  >
    <label
      class="c6 c7"
      for=":r3:"
      id=":r4:"
    >
      Unchecked
    </label>
  </div>
</div>
`;

exports[`render Checkbox with description object 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c6 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c6:last-child {
  margin-bottom: 0;
}

.c8 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c8:last-child {
  margin-bottom: 0;
}

.c7 {
  cursor: pointer;
}

.c9 {
  transition: all 70ms ease-out;
  transition-property: color;
  color: #3C64F4;
  cursor: pointer;
  font-size: 1rem;
  font-weight: 400;
  text-decoration: none;
}

.c9:active {
  color: #0024A6;
}

.c9:hover:not(:active) {
  color: #0024A6;
}

.c10 {
  font-size: 0.875rem;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,background,box-shadow,color,opacity;
  align-items: center;
  background: #FFFFFF;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  height: 1.25rem;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  user-select: none;
  width: 1.25rem;
}

.c3:hover {
  border-color: #B4BAD1;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 0;
}

<div
  class="c0"
>
  <input
    aria-checked="false"
    aria-labelledby=":r7:"
    class="c1 c2"
    id=":r6:"
    name="test-group"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    for=":r6:"
  >
    <svg
      aria-hidden="true"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M9 16.17L5.53 12.7a.996.996 0 10-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 10-1.41-1.41L9 16.17z"
      />
    </svg>
  </label>
  <div
    class="c5"
  >
    <label
      class="c6 c7"
      for=":r6:"
      id=":r7:"
    >
      Unchecked
    </label>
    <p
      class="c8"
    >
      description
       
      <a
        class="c9 c10"
        href="bar"
        target="foo"
      >
        learn more
      </a>
    </p>
  </div>
</div>
`;

exports[`render Checkbox with description string 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c6 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c6:last-child {
  margin-bottom: 0;
}

.c8 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c8:last-child {
  margin-bottom: 0;
}

.c7 {
  cursor: pointer;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,background,box-shadow,color,opacity;
  align-items: center;
  background: #FFFFFF;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  height: 1.25rem;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  user-select: none;
  width: 1.25rem;
}

.c3:hover {
  border-color: #B4BAD1;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 0;
}

<div
  class="c0"
>
  <input
    aria-checked="false"
    aria-labelledby=":rd:"
    class="c1 c2"
    id=":rc:"
    name="test-group"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    for=":rc:"
  >
    <svg
      aria-hidden="true"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M9 16.17L5.53 12.7a.996.996 0 10-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 10-1.41-1.41L9 16.17z"
      />
    </svg>
  </label>
  <div
    class="c5"
  >
    <label
      class="c6 c7"
      for=":rc:"
      id=":rd:"
    >
      Unchecked
    </label>
    <p
      class="c8"
    >
      description text
    </p>
  </div>
</div>
`;
